// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli fails when multiple queries have the same name 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions --cwd 'packages/graphql-typescript-definitions/test/fixtures/duplicate-names' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/duplicate-names'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/duplicate-names/schema.json → packages/graphql-typescript-definitions/test/fixtures/duplicate-names/types

 ERROR  GraphQL operations must have a unique name. The operation FindPerson is declared in:
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query1/FindPersonsQuery.graphql
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query2/FindPersonQuery.graphql
Error: GraphQL operations must have a unique name. The operation FindPerson is declared in:
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query1/FindPersonsQuery.graphql
 packages/graphql-typescript-definitions/test/fixtures/duplicate-names/documents/Query2/FindPersonQuery.graphql
    at duplicates.forEach (packages/graphql-typescript-definitions/lib/index.js)
    at Array.forEach (<anonymous>)
    at getDuplicateOperations.forEach (packages/graphql-typescript-definitions/lib/index.js)
    at Array.forEach (<anonymous>)
    at Builder.checkForDuplicateOperations (packages/graphql-typescript-definitions/lib/index.js)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)
    at Generator.next (<anonymous>)
    at packages/graphql-typescript-definitions/lib/index.js
    at new Promise (<anonymous>)
    at __awaiter (packages/graphql-typescript-definitions/lib/index.js)

",
}
`;

exports[`cli fails when there are syntax errors 1`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions --cwd 'packages/graphql-typescript-definitions/test/fixtures/malformed-query' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/malformed-query'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/malformed-query/schema.json → packages/graphql-typescript-definitions/test/fixtures/malformed-query/types
 ERROR  Syntax Error: Expected {, found Name \\"name\\"
GraphQLError: Syntax Error: Expected {, found Name \\"name\\"
    at syntaxError (node_modules/graphql/error/syntaxError.js)
    at expect (node_modules/graphql/language/parser.js)
    at many (node_modules/graphql/language/parser.js)
    at parseSelectionSet (node_modules/graphql/language/parser.js)
    at parseFragmentDefinition (node_modules/graphql/language/parser.js)
    at parseExecutableDefinition (node_modules/graphql/language/parser.js)
    at parseDefinition (node_modules/graphql/language/parser.js)
    at parseDocument (node_modules/graphql/language/parser.js)
    at Object.parse (node_modules/graphql/language/parser.js)
    at Builder.setDocumentForFilePath (packages/graphql-typescript-definitions/lib/index.js)

",
}
`;

exports[`cli fails when there are syntax errors 2`] = `
Object {
  "error": Object {
    "cmd": "packages/graphql-typescript-definitions/bin/graphql-typescript-definitions --cwd 'packages/graphql-typescript-definitions/test/fixtures/missing-schema' --schema-types-path 'packages/graphql-typescript-definitions/test/fixtures/missing-schema'",
    "code": 1,
    "killed": false,
    "signal": null,
  },
  "stderr": "",
  "stdout": " ERROR  Schema not found. Expected to find the schema at 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json' but the path does not exist. Check 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/.graphqlconfig' and verify that schemaPath is configured correctly.
Error: Schema not found. Expected to find the schema at 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/schema.json' but the path does not exist. Check 'packages/graphql-typescript-definitions/test/fixtures/missing-schema/.graphqlconfig' and verify that schemaPath is configured correctly.
    at GraphQLProjectConfig.resolveSchemaPath (packages/graphql-tool-utilities/lib/augmentations.js)
    at getGraphQLProjects.reduce (packages/graphql-tool-utilities/lib/config.js)
    at Array.reduce (<anonymous>)
    at Object.getGraphQLSchemaPaths (packages/graphql-tool-utilities/lib/config.js)
    at Builder.<anonymous> (packages/graphql-typescript-definitions/lib/index.js)
    at Generator.next (<anonymous>)
    at packages/graphql-typescript-definitions/lib/index.js
    at new Promise (<anonymous>)
    at __awaiter (packages/graphql-typescript-definitions/lib/index.js)
    at Builder.run (packages/graphql-typescript-definitions/lib/index.js)

",
}
`;

exports[`cli fails when there are unused types 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/schema.json → packages/graphql-typescript-definitions/test/fixtures/missing-types/types

 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Fragment.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/missing-types/documents/Query.graphql.d.ts
",
}
`;

exports[`cli succeeds when schemaPath is set to a graphql file 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/graphql-schema/schema.graphql → packages/graphql-typescript-definitions/test/fixtures/graphql-schema/types

 BUILT  packages/graphql-typescript-definitions/test/fixtures/graphql-schema/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/graphql-schema/documents/Query.graphql.d.ts
",
}
`;

exports[`cli succeeds when there are multiple schemas 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/schema.json → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/types
 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/schema.json → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/types

 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/documents/Fragment.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema1/documents/Query.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/documents/Fragment.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/multiple-schemas/schema2/documents/Query.graphql.d.ts
",
}
`;

exports[`cli succeeds when there are no fixture errors 1`] = `
Object {
  "error": null,
  "stderr": "",
  "stdout": "
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/schema.json → packages/graphql-typescript-definitions/test/fixtures/all-clear/types

 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Fragment.graphql.d.ts
 BUILT  packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql → packages/graphql-typescript-definitions/test/fixtures/all-clear/documents/Query.graphql.d.ts
",
}
`;
